--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@adeya/ssi": "0.0.1-alpha.30",
+    "@adeya/ssi": "1.0.1-alpha.0",
     "@ayanworks/credo-polygon-w3c-module": "1.0.0",
     "@ethersproject/shims": "^5.7.0",
     "@formatjs/intl-datetimeformat": "^6.10.0",
@@ -51,12 +51,13 @@
     "lodash.shuffle": "^4.2.0",
     "lodash.startcase": "^4.4.0",
     "moment": "^2.29.4",
+    "nanoid": "^5.0.9",
     "process": "^0.11.0",
     "qrcode": "^1.5.3",
     "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-i18next": "^13.0.3",
-    "react-native": "0.72.5",
+    "react-native": "0.72.17",
     "react-native-animated-pagination-dots": "^0.1.73",
     "react-native-argon2": "^2.0.1",
     "react-native-blob-util": "^0.19.9",
@@ -79,7 +80,7 @@
     "react-native-permissions": "^3.9.0",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-randombytes": "^3.0.0",
-    "react-native-reanimated": "^3.4.1",
+    "react-native-reanimated": "3.14.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-scalable-image": "^1.1.0",
@@ -87,7 +88,7 @@
     "react-native-securerandom": "^1.0.1",
     "react-native-share": "^10.0.1",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-svg": "^13.10.0",
+    "react-native-svg": "15.2.0",
     "react-native-tcp-socket": "^6.0.6",
     "react-native-toast-message": "^2.1.6",
     "react-native-vector-icons": "^10.0.0",
@@ -105,7 +106,7 @@
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native/eslint-config": "^0.72.2",
-    "@react-native/metro-config": "^0.72.11",
+    "@react-native/metro-config": "^0.72.12",
     "@tsconfig/react-native": "^3.0.0",
     "@types/crypto-js": "^4.2.2",
     "@types/lodash.flatten": "^4.4.7",
@@ -132,7 +133,7 @@
     "husky": "^8.0.3",
     "jest": "^29.2.1",
     "lint-staged": "^13.2.3",
-    "metro-react-native-babel-preset": "0.76.8",
+    "metro-react-native-babel-preset": "^0.76.9",
     "prettier": "^3.0.0",
     "react-native-svg-transformer": "^1.1.0",
     "react-test-renderer": "18.2.0",
@@ -149,5 +150,11 @@
     "_stream_duplex": "readable-stream/duplex",
     "_stream_passthrough": "readable-stream/passthrough",
     "stream": "stream-browserify"
-  }
+  },
+  "resolutions": {
+    "@credo-ts/core": "0.5.11",
+    "@credo-ts/askar": "0.5.11",
+    "nanoid": "^5.0.9"
+  },
+  "packageManager": "yarn@1.22.22"
 }
