--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@hyperledger/aries-oca": "1.0.0-alpha.130",
     "@hyperledger/indy-vdr-react-native": "0.2.2",
     "@react-native-async-storage/async-storage": "^1.19.1",
-    "@react-native-clipboard/clipboard": "^1.14.1",
+    "@react-native-clipboard/clipboard": "1.14.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "^9.4.1",
     "@react-native-firebase/app": "^18.4.0",
@@ -70,7 +70,7 @@
     "react-native-device-info": "^10.8.0",
     "react-native-document-picker": "9.0.1",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "^2.12.1",
+    "react-native-gesture-handler": "2.20.2",
     "react-native-get-random-values": "^1.9.0",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-html-to-pdf": "^0.12.0",
