--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -116,6 +116,8 @@ android {
     }
 
     packagingOptions {
+        exclude("META-INF/MANIFEST.MF")
+        exclude 'META-INF/ASL2.0'
         pickFirst 'lib/x86/libc++_shared.so'
         pickFirst 'lib/x86_64/libjsc.so'
         pickFirst 'lib/arm64-v8a/libjsc.so'
