--- a/package.json
+++ b/package.json
@@ -16,14 +16,7 @@
     "@adeya/ssi": "1.0.1-alpha.0",
     "@ayanworks/credo-polygon-w3c-module": "1.0.0",
     "@ethersproject/shims": "^5.7.0",
-    "@formatjs/intl-datetimeformat": "^6.10.0",
-    "@formatjs/intl-displaynames": "^6.5.0",
-    "@formatjs/intl-getcanonicallocales": "^2.2.1",
-    "@formatjs/intl-listformat": "^7.4.0",
-    "@formatjs/intl-locale": "^3.3.2",
-    "@formatjs/intl-numberformat": "^8.7.0",
-    "@formatjs/intl-pluralrules": "^5.2.4",
-    "@formatjs/intl-relativetimeformat": "^11.2.4",
+    "@formatjs/intl": "^3.1.3",
     "@hyperledger/anoncreds-react-native": "0.2.2",
     "@hyperledger/aries-askar-react-native": "0.2.1",
     "@hyperledger/aries-oca": "1.0.0-alpha.130",
@@ -35,18 +28,18 @@
     "@react-native-firebase/app": "^18.4.0",
     "@react-native-firebase/messaging": "^18.4.0",
     "@react-native-google-signin/google-signin": "12.1.0",
-    "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/core": "^7.3.1",
-    "@react-navigation/devtools": "^7.0.15",
-    "@react-navigation/native": "^7.0.14",
-    "@react-navigation/stack": "^7.1.1",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/core": "^6.4.9",
+    "@react-navigation/devtools": "^6.0.19",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.3.17",
     "@robinbobin/react-native-google-drive-api-wrapper": "^1.2.4",
     "axios": "^1.7.8",
     "bip39": "^3.1.0",
     "crypto-js": "^4.2.0",
     "events": "^1.1.1",
     "expo-modules-core": "^1.12.26",
-    "i18next": "^23.15.2",
+    "i18next": "^24.2.1",
     "lodash.flatten": "^4.4.0",
     "lodash.shuffle": "^4.2.0",
     "lodash.startcase": "^4.4.0",
