--- a/package.json
+++ b/package.json
@@ -16,14 +16,7 @@
     "@adeya/ssi": "1.0.1-alpha.0",
     "@ayanworks/credo-polygon-w3c-module": "1.0.0",
     "@ethersproject/shims": "^5.7.0",
-    "@formatjs/intl-datetimeformat": "^6.10.0",
-    "@formatjs/intl-displaynames": "^6.5.0",
-    "@formatjs/intl-getcanonicallocales": "^2.2.1",
-    "@formatjs/intl-listformat": "^7.4.0",
-    "@formatjs/intl-locale": "^3.3.2",
-    "@formatjs/intl-numberformat": "^8.7.0",
-    "@formatjs/intl-pluralrules": "^5.2.4",
-    "@formatjs/intl-relativetimeformat": "^11.2.4",
+    "@formatjs/intl": "^3.1.3",
     "@hyperledger/anoncreds-react-native": "0.2.2",
     "@hyperledger/aries-askar-react-native": "0.2.1",
     "@hyperledger/aries-oca": "1.0.0-alpha.130",
