--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-native-get-random-values": "^1.9.0",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-html-to-pdf": "^0.12.0",
+    "react-native-keyboard-controller": "^1.16.7",
     "react-native-keychain": "^8.1.2",
     "react-native-localize": "^3.0.2",
     "react-native-pdf": "^6.7.5",
@@ -77,7 +78,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-scalable-image": "^1.1.0",
-    "react-native-screens": "^3.23.0",
+    "react-native-screens": "3.22.0",
     "react-native-securerandom": "^1.0.1",
     "react-native-share": "^10.0.1",
     "react-native-splash-screen": "^3.3.0",
@@ -147,7 +148,8 @@
   "resolutions": {
     "@credo-ts/core": "0.5.11",
     "@credo-ts/askar": "0.5.11",
-    "nanoid": "^5.0.9"
+    "nanoid": "^5.0.9",
+    "react-native-screens": "^3.22.0"
   },
   "packageManager": "yarn@1.22.22"
 }
